fix: interaction
